Fixed parent sdk pom conflicts