@@ -101,136 +101,6 @@
             And when the CI server builds the project supply the environment specific setting as follows:
                 $mvn clean integration-test -Denv=ci
         -->
-<<<<<<< HEAD
-    <alfresco.groupId>org.alfresco</alfresco.groupId>
-    <alfresco.version>${alfresco.community.default.version}</alfresco.version>
-    <!-- By default uses community artifacts (alfresco|share). Overridden in the 'enterprise' profile, with 'alfresco-enterprise' and 'share-enterprise' -->
-    <alfresco.repo.artifactId>alfresco</alfresco.repo.artifactId>
-    <alfresco.share.artifactId>share</alfresco.share.artifactId>
-
-    <!--  Values can be "alfresco" or "share". Default value is 'alfresco' assuming you are developing a repository AMP, change to share for share AMPs
-        | This impact (in AMP projects) the choice of the WAR project for embedded run
-         -->
-    <alfresco.client.war>${alfresco.repo.artifactId}</alfresco.client.war>
-    <alfresco.client.war.groupId>${alfresco.groupId}</alfresco.client.war.groupId>
-    <alfresco.client.war.version>${alfresco.version}</alfresco.client.war.version>
-    
-    <!-- IMPORTANT! Override this only if you know what you're doing; it could break amp-to-war overlay -->
-    <alfresco.client.war.folder>${project.build.directory}/${project.build.finalName}-war</alfresco.client.war.folder>
-
-    <!-- Alfresco Repo disk storage folder (relative path) -->
-    <alfresco.data.location>alf_data_dev</alfresco.data.location>
-
-    <!-- Alfresco Repo configuration with embedded DB -->
-    <alfresco.db.name>alf_dev</alfresco.db.name>
-    <alfresco.db.username>alfresco</alfresco.db.username>
-    <alfresco.db.password>alfresco</alfresco.db.password>
-      <!--
-      AUTO_SERVER=TRUE: Multiple processes can access the same database without having to start the server manually.
-                        Such as multiple internal Alfresco connections and for example SQuirreL externally,
-
-                        If you don't use it you will see errors such as:
-                        "java.util.concurrent.ExecutionException: java.lang.RuntimeException: org.h2.jdbc.JdbcSQLException:
-                         Database may be already in use: "all-in-one-test/alf_data_dev/h2_data/alf_dev.mv.db".
-                         Possible solutions: close all other connection(s); use the server mode [90020-186]"
-
-      DB_CLOSE_ON_EXIT=FALSE: Don't manually close the database when the JVM exists.
-
-                        If you don't use it you will see errors such as:
-                        "[factory.support.DisposableBeanAdapter] [localhost-startStop-2] Invocation of destroy method
-                        'close' failed on bean with name 'repoSqlSessionTemplate': java.lang.UnsupportedOperationException:
-                        Manual close is not allowed over a Spring managed SqlSession"
-
-
-      The following 2 properties are needed to avoid cryptic node not found exceptions:
-        MVCC=FALSE: Multi-Version Concurrency Control disabled, enabling it means LOCK_MODE has no effect.
-        LOCK_MODE=0: Read Uncommitted, this level means that transaction isolation is disabled.
-      -->
-    <alfresco.db.params>AUTO_SERVER=TRUE;DB_CLOSE_ON_EXIT=FALSE;LOCK_TIMEOUT=10000;MVCC=FALSE;LOCK_MODE=0</alfresco.db.params>
-
-    <!-- H2 flat file database will be created in a relative path, such as alf_data_dev/h2_data/alf_dev-->
-    <alfresco.db.url>jdbc:h2:./${alfresco.data.location}/h2_data/${alfresco.db.name};${alfresco.db.params}</alfresco.db.url>
-    <alfresco.db.datasource.class>org.h2.jdbcx.JdbcDataSource</alfresco.db.datasource.class>
-
-    <!-- SDK Properties -->
-    <!--
-    Built-in multi-environment property placeholding support (also for testing); to enable it on your sub-modules
-    * create app.properties.folder (default=src/main/properties/${env}) folder structure
-    * place properties files in that folder with the correct name
-    Both 'alfresco' and 'share' sub-modules currently use it.
-    -->
-    <env>local</env>
-    <!--  Be default we assume to we load all properties files under ${app.properties.folder}
-        | and
-        | This can be overridden your pom
-     -->
-    <app.amp.folder>src/main/amp</app.amp.folder>
-    <app.amp.output.folder>../${project.build.finalName}</app.amp.output.folder>
-    <!-- AMP excludes when installing into a WAR, by default empty (i.e. everything is included) -->
-    <app.amp.overlay.excludes />
-    <!-- Empty AMP source excludes by default, see the amp-to-war profile for usage example -->
-    <app.amp.excludes />
-    <app.properties.folder>src/main/properties/${env}</app.properties.folder>
-    <app.properties.test.folder>src/test/properties/${env}</app.properties.test.folder>
-    <app.properties.include>**</app.properties.include>
-    <app.properties.test.include>**</app.properties.test.include>
-
-    <!--  Turns on/off POM properties filtering globally. By default filtering is on.
-        | This can be overridden in your POM, but do it at your own risk
-        | as it may break SDK functionalities
-         -->
-    <app.filtering.enabled>true</app.filtering.enabled>
-    <app.testing.jvm.args>-Xms256m -Xmx1524m -XX:MaxPermSize=256m -Duser.language=en</app.testing.jvm.args>
-
-    <!--  Logging in project's target folder by default
-        | NOTE: Remember the trailing slash when overriding this.
-         -->
-    <app.log.dir>${project.build.directory}/</app.log.dir>
-    <app.log.root.level>WARN</app.log.root.level>
-    
-    <!-- Needed for community to avoid weird logging exceptions -->
-    <app.slf4j.scope>runtime</app.slf4j.scope>
-    <app.slf4j.version>1.5.11</app.slf4j.version>
-
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
-    <!-- Maven Plugins Versions used by the SDK -->
-    <maven.compiler.version>3.2</maven.compiler.version>
-    <maven.clean.version>2.6.1</maven.clean.version>
-    <maven.dependency.version>2.9</maven.dependency.version>
-    <maven.enforcer.plugin>1.3.1</maven.enforcer.plugin>
-    <maven.resources.version>2.7</maven.resources.version>
-    <maven.surefire.version>2.18</maven.surefire.version>
-    <maven.install.version>2.5.2</maven.install.version>
-    <maven.jar.version>2.5</maven.jar.version>
-    <maven.war.version>2.5</maven.war.version>
-    <maven.antrun.version>1.7</maven.antrun.version>
-    <maven.release.version>2.5.1</maven.release.version>
-    <maven.buildhelper.version>1.9.1</maven.buildhelper.version>
-    <maven.replacer.version>1.5.3</maven.replacer.version>
-    <maven.tomcat.version>2.2</maven.tomcat.version>
-
-    <!-- This is used for the site deployment procedure (override in your POM as needed) -->
-    <stagingDirectory>../../target/staging/poms/alfresco-sdk-parent</stagingDirectory>
-
-    <!-- Maven Alfresco plugin in use throughout the SDK -->
-    <maven.alfresco.version>2.0.1-SNAPSHOT</maven.alfresco.version>
-
-    <!-- Note. Upgrading to 1.4.186 did not work, on second start (after initial db creation etc) it will not connect... -->
-    <h2.version>1.4.185</h2.version>
-
-    <junit.version>4.11</junit.version>
-    <maven.jetty.version>7.4.0.v20110414</maven.jetty.version>
-  </properties>
-
-  <!-- This repository is only needed to retrieve Alfresco parent POM. 
-        NOTE: This can be removed when/if Alfresco will be on Maven Central 
-        
-        NOTE: The repository to be used for Alfresco Enterprise artifacts is
-        https://artifacts.alfresco.com/nexus/content/groups/private/. Please check
-        with Alfresco Support to get credentials to add to your ~/.m2/settings.xml
-        if you are a Enterprise customer or Partner  
-=======
         <env>local</env>
         <app.properties.folder>src/main/properties/${env}</app.properties.folder>
         <app.properties.test.folder>src/test/properties/${env}</app.properties.test.folder>
@@ -278,7 +148,6 @@
         <!-- This is used to set the version for the following Alfresco artifacts:
               - Maven Alfresco plugin that enables Maven to handle AMP files (alfresco-maven-plugin)
               - Alfresco Rapid Application Development module (alfresco-rad)
->>>>>>> 60193a702937e74add2b0966643652e6a0c539f6
         -->
         <maven.alfresco.version>2.0.1-SNAPSHOT</maven.alfresco.version>
 
@@ -344,107 +213,11 @@
         </pluginRepository>
     </pluginRepositories>
 
-<<<<<<< HEAD
-  <pluginRepositories>
-    <pluginRepository>
-      <id>sonatype-snapshots</id>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-      <snapshots>
-        <enabled>true</enabled>
-        <updatePolicy>daily</updatePolicy>
-      </snapshots>
-    </pluginRepository>
-    <pluginRepository>
-      <id>alfresco-plugin-public</id>
-      <url>https://artifacts.alfresco.com/nexus/content/groups/public</url>
-    </pluginRepository>
-    <pluginRepository>
-      <id>alfresco-plugin-public-snapshots</id>
-      <url>https://artifacts.alfresco.com/nexus/content/groups/public-snapshots</url>
-      <snapshots>
-        <enabled>true</enabled>
-        <updatePolicy>daily</updatePolicy>
-      </snapshots>
-    </pluginRepository>
-  </pluginRepositories>
-
-  <build>
-    <finalName>${project.artifactId}</finalName>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.alfresco.maven.plugin</groupId>
-          <artifactId>alfresco-maven-plugin</artifactId>
-          <version>${maven.alfresco.version}</version>
-          <extensions>true</extensions>
-          <configuration>
-              <snapshotToTimestamp>true</snapshotToTimestamp>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>${maven.compiler.version}</version>
-          <configuration>
-            <source>1.7</source>
-            <target>1.7</target>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>${maven.resources.version}</version>
-          <configuration>
-            <encoding>UTF-8</encoding>
-            <nonFilteredFileExtensions>
-              <nonFilteredFileExtension>ftl</nonFilteredFileExtension>
-              <nonFilteredFileExtension>acp</nonFilteredFileExtension>
-              <nonFilteredFileExtension>jpg</nonFilteredFileExtension>
-              <nonFilteredFileExtension>png</nonFilteredFileExtension>
-              <nonFilteredFileExtension>gif</nonFilteredFileExtension>
-              <nonFilteredFileExtension>svg</nonFilteredFileExtension>
-              <nonFilteredFileExtension>pdf</nonFilteredFileExtension>
-              <nonFilteredFileExtension>doc</nonFilteredFileExtension>
-              <nonFilteredFileExtension>docx</nonFilteredFileExtension>
-              <nonFilteredFileExtension>xls</nonFilteredFileExtension>
-              <nonFilteredFileExtension>xlsx</nonFilteredFileExtension>
-              <nonFilteredFileExtension>ppt</nonFilteredFileExtension>
-              <nonFilteredFileExtension>pptx</nonFilteredFileExtension>
-              <nonFilteredFileExtension>bin</nonFilteredFileExtension>
-              <nonFilteredFileExtension>lic</nonFilteredFileExtension>
-              <nonFilteredFileExtension>swf</nonFilteredFileExtension>
-              <nonFilteredFileExtension>zip</nonFilteredFileExtension>
-              <nonFilteredFileExtension>msg</nonFilteredFileExtension>
-              <nonFilteredFileExtension>jar</nonFilteredFileExtension>
-              <nonFilteredFileExtension>ttf</nonFilteredFileExtension>
-              <nonFilteredFileExtension>eot</nonFilteredFileExtension>
-              <nonFilteredFileExtension>woff</nonFilteredFileExtension>
-              <nonFilteredFileExtension>woff2</nonFilteredFileExtension>
-              <nonFilteredFileExtension>css</nonFilteredFileExtension>
-            </nonFilteredFileExtensions>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-war-plugin</artifactId>
-          <version>${maven.war.version}</version>
-          <configuration>
-            <archiveClasses>false</archiveClasses>
-            <archive>
-                <manifest>
-                    <addClasspath>true</addClasspath>
-                </manifest>
-            </archive>
-          </configuration>
-          <dependencies>
-                <dependency>
-=======
     <build>
         <finalName>${project.artifactId}</finalName>
         <pluginManagement>
             <plugins>
                 <plugin>
->>>>>>> 60193a702937e74add2b0966643652e6a0c539f6
                     <groupId>org.alfresco.maven.plugin</groupId>
                     <artifactId>alfresco-maven-plugin</artifactId>
                     <version>${maven.alfresco.version}</version>
@@ -492,6 +265,7 @@
                             <nonFilteredFileExtension>eot</nonFilteredFileExtension>
                             <nonFilteredFileExtension>woff</nonFilteredFileExtension>
                             <nonFilteredFileExtension>woff2</nonFilteredFileExtension>
+                            <nonFilteredFileExtension>css</nonFilteredFileExtension>
                         </nonFilteredFileExtensions>
                     </configuration>
                 </plugin>
